SERVER-38906 Txns read without timestamp by default